# OOP-Geekbrains-

lesson1/build-l1_hw1-Desktop_Qt_5_15_0_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  l1_hw1  l1_hw1.cbp
lesson1/build-l1_hw1-Desktop_Qt_5_15_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-90b797b1567c457d087e.json  cmakeFiles-v1-9971d15fc0c6d4aee71e.json  (+4 more)
lesson1/build-l1_hw2-Desktop_Qt_5_15_0_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  l1_hw2  l1_hw2.cbp
lesson1/build-l1_hw3-Desktop_Qt_5_15_0_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  l1_hw3  l1_hw3.cbp  qtcsettings.cmake
lesson1/l1_hw1/: CMakeLists.txt  main.cpp
lesson1/l1_hw2/: CMakeLists.txt  main.cpp
lesson1/l1_hw3/: CMakeLists.txt  main.cpp
lesson2/: l2_hw3
lesson2/l2_hw1/: CMakeLists.txt  main.cpp  person.cpp
lesson2/l2_hw1/include/: person.hpp
lesson2/l2_hw2/: CMakeLists.txt  main.cpp
lesson3/l3_hw1/: CMakeLists.txt  main.cpp
lesson3/l3_hw2/: CMakeLists.txt  main.cpp
lesson3/l3_hw3/: CMakeLists.txt  main.cpp
lesson4/l4_hw1/: CMakeLists.txt  main.cpp
lesson4/l4_hw2/: CMakeLists.txt  main.cpp
lesson5/l5_hw1/: CMakeLists.txt  main.cpp
lesson5/l5_hw2/: CMakeLists.txt  main.cpp
lesson5/l5_hw3/: CMakeLists.txt  main.cpp
lesson6/l6_hw1/: CMakeLists.txt  main.cpp
lesson6/l6_hw2/: CMakeLists.txt  main.cpp
lesson7/l6_hw6/: CMakeLists.txt  Yandex.html  main.cpp
lesson7/l7_hw1-2/: CMakeLists.txt  main.cpp
lesson8/l8_hw1/: CMakeLists.txt  main.cpp
lesson8/l8_hw2/: CMakeLists.txt  main.cpp
lesson8/l8_hw3/: main.cpp
(+12 files in other folders)
